# aeitron-agentic-ai

./: .gitignore  AGENTS.md  Dockerfile  README.md  aeitron_client.py  alembic.ini  pyproject.toml  requirements-kaggle-smoke.txt  requirements-linux-gpu.txt  requirements-local-dev.txt  requirements.txt
config/: active_model_profile.json  active_model_profile.ps1  alignment_policy.json  data_reviewers.json  data_sources.ci.json  data_sources.defensive.sample.json  data_sources.governed.selection.json  data_sources.governed.staging.json  data_sources.production.sample.json  data_sources.top_class.sample.json  data_sources.ultimate.json  dataset_trust_policy.json  defensive_checkpoint_qualification.json  eval_schedule.json  governed_source_evidence_origins.json  mix_ratios.json  mythos_v1_training_manifest.json  production_qualification.json  protected_benchmarks.json  rag_embedding_training.json  repository_qualification_sources.json  security_audit_excludes.json  training_profiles.json  training_qualification_campaigns.json  verifier_policy.json
docs/: aeitron_complete_architecture_manual.md  gpu_7b32b_readiness.md  live_infra_blockers.md  mvp_start_guide.md  mythos_complete_architecture_manual.md  mythos_target_architecture.md  mythos_v1_productization.md  phase10_deployment_smoke.md  phase11_20_step_architecture_plan.md  phase11_pytorch_ai_core.md  phase12_capability_gauntlet.md  phase13_backend_quality.md  phase16_core_upgrades.md  phase18_model_quality_loop.md  phase19_to_23_quality_hardening.md  phase1_to_51_architecture_manual.md  phase5_self_healing_blueprint.md  (+11 more)
(+539 files in other folders)
