[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aeitron-client"
version = "1.0.0"
description = "Authenticated SDK and CLI for the Aeitron Training Workspace"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27,<1",
]

[project.scripts]
aeitron = "src.aeitron.training_client:main"

[tool.setuptools]
packages = ["src", "src.aeitron"]
py-modules = ["aeitron_client"]
